# openai_example

./: pyproject.toml
openai_v1_python/: __init__.py
