[tool.poetry]
name = "openai-v1-python"
version = "0.1.0"
description = ""
authors = ["Matthew Endicott <112583934+Matthew-Endicott-GR@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.33.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
